# apick

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  apick.py  demo.tape  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_apick.py
